--- a/_posts/2015-08-17-Apatride.md
+++ b/_posts/2015-08-17-Apatride.md
@@ -7,15 +7,14 @@ categories:
 
 Étonnant.
 Ciel bleu pour cette ville nordique à l'habituelle chape de plomb.
-Soleil à la verticale.
-Street food, un simple banc à la marge du congrès, la sueur qui colle les chemises aux corps.
+Soleil à la verticale, street food, simple banc à la marge du congrès, la sueur qui colle les chemises à la peau.
 
-- Wie sagt man schon mal sieben auf Chinesisch? *[Comment dit-on sept en Chinois déjà?]*
+- Wie sagt man schon sieben auf Chinesisch? *[Comment dit-on sept en Chinois déjà?]*
 - qi
 - qi (une voix sur un banc adjacent)
 - ...
-- Hi, you are attending this crazy conference too?
-- Genau *[exactement]*
+- Hello. You are attending this crazy conference too?
+- Genau. *[exactement]*
 - Ah, Sie sprechen Deutsch? *[And you speak German?]*
 - Ich spreche Deutsch.
 Nur bissen.
@@ -24,68 +23,56 @@ Ich war zweimal Berlin, einmal Erlengue und einmal Jena *[Je parle peu Allemand,
 - Es war DDR *[C'etait la RDA]*
 - ... ... ...?
 - I was living in East Berlin and going to the TU in west Berlin everyday.
-- When was that, I mean, it's a long time ago right?
+- When was that? I mean, it's a long time ago right?
 
 Immense barbe gris blanc, maigre comme un gourou, âge indéfini au delà de la soixantaine, sandales de pèlerin, sac à dos de toile et T-shirt Che-Guevara...
 Des yeux brillants et fiévreux mêlant malice et folie.
-Asiatique, le parfait candidat pour tout entrainement de futur samouraïs.
+Asiatique, le parfait candidat pour jouer le mentor de futur samouraïs dans un film de Kung-Fu.
 Ce mec est une anomalie.
 
-- Es war ein neun... tausent neun... neunzehnhundertneuzig. *[C'etait dix neuf cent quatre-vingt dix.]*
-- Ah ok, it was after den Mauerfall right?
-- Yes but it was not yet BRD.
-- True, it happened in october third of that year. You speak well german, but you also speak chinese.
-- Naturally
-- You are chinese? Where are you coming from?
+- Es war ein neun... tausent neun... neunzehnhundertneuzig. *[C'etait dix neuf cent quatre-vingt dix.]* it was after den Mauerfall, but it was not yet BRD.
+- True, that happened october third of that year. You speak well german, but you also speak chinese?
+- Naturally.
+- Are you Chinese? Where are you coming from?
 - I am patride.
 - I beg you pardon?
 - I am patride.
-- Il est apatride
+- Il est apatride.
 - Apatride? Qu'est ce que ça veut dire?
 - Staatenlos.
 - Echt? *[Really?]*
-- Yes no country
+- Yes, no country.
 - But where are you coming from?
-- No important
+- Not important.
 - Was meint er? *[what does he means?]*
 - Er meint, dass es unwichtig sei. *[Il dit que cela n'a pas d'importance]*
-- Exactly, unwichtig.
-- Well, you seem to understand chinese.
-- From birth I am from Japan, from passport I am italian.
-- Krass, oder?
-- Krass!
-- And at which university are you working?
-- In Algeria
+- Exactly, unwichtig. From birth I am from Japan, from passport I am Italian, in reality I am a vagabondo.
+- AhAh. And, at which university are you working?
+- In Algeria.
 - What? In Alger?
-- No
+- No.
 - In Oran?
-- No, in a small village next to Tunesia
+- No, in a small village next to Tunesia.
 - There's a university there?
 - No, it is a school, a high school.
-- Krass.
+- Krass, oder?
 - Genau, krass.
-- So you speak, well, tu parles Français?
-- Oui, oui je parle Français
-- Incroyable
-- Mais vous aussi vous parlez Français et Allemand
-- Enfin, oui, Alexandre c'est un Allemand de mère Marseillaise...
-- Lui il est Français naturalisé Allemand
-- Intéressant, tous apatrides
-- Well, indeed, sort of, I am living here now, and trying to get into the language.
-- C'est facile, c'est de la poésie et de l'art graphique.
-- Il faut croire que je ne suis doué ni pour l'un ni pour l'autre.
-Et ma prof est une furie.
-- Chinese way.
-- Puis-je te demander ce que tu fais ici?
-- Je suis venu assister à la conférence comme vous.
-- Naja, das würde ich nicht unbedingt freiwillig tun, drei tausend Mathematiker voll in dem Congress Zentrum gepackt, es gibt bessere Dinge zu erleben. *[Et bien, je ne le ferais pas volontairement. S'enfermer avec trois mille mathématiciens, il y a franchement mieux à faire.]*
+- So you speak..., but well, tu parles probablement Français?
+- Oui, oui je parle Français, c'est normal, vous aussi vous parlez Français et Allemand.
+- Enfin, oui, Alexandre est Allemand de mère Marseillaise...
+- Et lui il est Français naturalisé Allemand.
+- Intéressant, tous apatrides.
+- Well seen that way, indeed, sort of.
+Puis-je te demander ce que tu fais ici?
+- Je suis venu assister à la conférence, comme vous apparemment.
+- Naja, das würde ich nicht unbedingt freiwillig tun, drei tausend Mathematiker in einem Congress Zentrum voll gepackt, es gibt bessere Dinge zu erleben. *[Et bien, je ne le ferais pas volontairement. S'enfermer avec trois mille mathématiciens, il y a franchement mieux à faire.]*
 - I gave a talk there. On water.
 - On water?
-- oui, sur les colones d'eau.
-- Ah, fluid dymamics right? Typhon, vapeur, nuages, tout ça non?
+- Oui, sur les colonnes d'eau.
+- Ah, fluid dymamics right? Typhon, vapeur, nuages, partial differential equations, tout ça non?
 - Exactement.
 
-Un hippie Japonais en sandales avec un T-Shirt Che-Guevara, un passeport italien, professeur de collège dans un village Kabyle en Algérie, perdu sur un banc à manger une soupe de nouille de l'autre côté de la muraille, le tout pour présenter des résultats sur des colonnes de nuages dans une conférence à 3500 personnes.
+Un hippie Japonais en sandales avec un T-Shirt Che-Guevara, un passeport italien, professeur de collège dans un village Kabyle en Algérie, perdu sur un banc à manger une soupe de nouille de l'autre côté de la muraille, le tout pour présenter des résultats sur des colonnes de nuages noyé dans une conférence rassemblant 3500 personnes.
 Et parlant pas moins de 5 langues.  
 Why not?  
 Why not.
@@ -93,37 +80,40 @@ Why not.
 Il a quitté l'université de Turin.
 *Rejet d'une haïssable colonie de la dictature des bureaucrates*, problème de perte de la passion -- selon ses termes -- des idéaux.
 Comme si cela existait encore.
-Et pourtant si, il semble vivre le sien, dans la patrie du *révolutionnaire Boumedienne* au milieu des chèvres Kabyle tout en continuant ses recherches en dynamique des fluides, dans la dignité.
-Tout simplement parce que c'est comme cela.
+Et pourtant si, il semble vivre le sien, dans la patrie du *révolutionnaire Boumedienne* au milieu des chèvres Kabyle tout en continuant ses recherches en dynamique des fluides, dans la *dignité*.
+Tout simplement parce que c'est ainsi.
 Bedingungslos.
-Et il se trouve ici, appréciant les *tavernes* où l'on sert de la bière; bière *du peuple* cela va sans dire.
+Et il se trouve ici, évoquant combien il apprécie cette ville *vielle comme les montagnes et pourtant nouvelle comme les nuages du matin*, combien il apprécie les *tavernes* où l'on sert de la bière; *bière du peuple* cela va sans dire.
 
-- So we have to go back, my talk starts in ten minutes.
+- I just moved here recently, and I try to get into the language.
+- C'est facile, c'est de la poésie et de l'art graphique.
+- Il faut croire que je ne suis doué ni pour l'un ni pour l'autre.
+Et ma prof est une furie.
+- Chinese way.
+- But ok, we have to go back, my talk starts in ten minutes.
 It was very nice meeting you.
 - The pleasure was for me. You have good eyes. You are a good person.
-- Euh, thank you, but well I do not know if they reflect the reality.
+- Euh... Thank you, but I do not quite know if they *reflect a reality*.
 - Wait a minute, tu apprends le Chinois, tu lis les charactères?
 Take this, this is the conclusion of my talk, I wrote it in Chinese and translated into French.
 - Many thanks, really.
 
-Un page a4 chiffonnée, quatre strophes en Chinois, au dos d'une lettre personnelle adressée à un ami.
+Un page a4 chiffonnée, une strophe de quatre vers en Chinois, au dos d'une lettre personnelle adressée à un ami.
 
-- Nach all den Jahren, fasse ich es immer noch nicht wieviele seltsame Typen man in unsere Community treffen kann. *[Malgré les années qui passent, je suis toujours surpris des personalités totalement atypique que l'on rencontre dans notre communauté]*
-
-Un inconditionnel révolutionnaire japonais claquant la porte de son université Italienne  
-Qui te parle de l'Allemagne de l'Est avec une larme à l'œil  
-Faisant de la recherche en dynamique des fluides dans un désert en Algérie  
-Et qui te sert ses résultats avec de la poésie en vers, en Chinois...
-
+- Nach all den Jahren, fasse ich es immer noch nicht wieviele seltsame Typen man in unsere Community treffen kann. *[Malgré les années qui passent, je suis toujours surpris du nombre de personalités totalement atypique que l'on rencontre dans notre communauté]*
 - Es stimmt, es macht ja auch deren Charme. *[C'est vrai, cela en fait son charme]*
 - Naja, Charme und Wahsinn.
 
-Inconditionnel
+Un inconditionnel révolutionnaire japonais claquant la porte de son université Italienne;  
+Qui évoque la fraternité socialiste des petites tavernes, une larme à l'œil;  
+Faisant de la recherche en dynamique des fluides dans un désert(!) en Algérie;  
+Et qui te sert ses résultats avec de la poésie, en Chinois...  
+Inconditionnel  
 
 > *Tout d'un coup sous le soleil s'élève un nuage noirâtre,*  
 > *Comme un dragon, monte au ciel, expirant des foudres.*  
-> *Le vent dense, la pluie court, les grêles sautent.*  
-> *Qui savait que le dragon m'est qu'une douve vapeur d'eau.*  
+> *Le vent danse, la pluie court, les grêles sautent.*  
+> *Qui savait que le dragon n'est qu'une douce vapeur d'eau.*  
 
 Anonimo matematico vagabondo
 
