--- a/_posts/2015-09-09-souslin.md
+++ b/_posts/2015-09-09-souslin.md
@@ -19,21 +19,24 @@ Je ne sais pas quelle est la cardinalité de la totalité des mesures mais c'est
 Même pour une seule mesure donnée, les ensembles négligeables peuvent être vraiment inaccessibles.
 Pense au partitionnement ensemble maigre/mesure nulle que tu peux toujours réaliser.
 Cela défie déjà mon entendement.
-- Si tu nies déjà l'existence de la continuité du temps, les schémas de Souslin je comprends que cela te choque.
+- Si tu nies déjà l'existence de la continuité du temps, alors les schémas de Souslin...
+Je comprends que cela te choque.
 - Je crois au power set et donc aux infinis non dénombrables.
 Donc à priori ces schémas ne me choquent pas vraiment.
 Je ne comprends cependant pas pourquoi tu veux absolument travailler dans cet univers.
 - C'est plus une intuition.
-De manière générique, si tu veux faire des mathématiques solides, il faut te déplacer dans un univers régit par une algèbre de Boole complète.
-Si tu y réfléchis bien, c'est le cas dans la majorité des compartiments des mathématiques même si personne n'y prête véritablement attention.
+De manière générique, si tu veux faire des mathématiques solides, il te faut un univers régit par une algèbre de Boole complète.
+Si tu y réfléchis bien, c'est le cas dans presque tous les domaines des mathématiques même si personne n'y prête véritablement attention.
 - Tu veux dire afin de pouvoir définir des objets en limite.
 - Plus que cela: afin de juger dans toute limite de la véracité ou non d'une assertion dans ton univers.
 En stochastique, c'est le cas dès que tu as fixé une mesure.
 Tu construis alors une théorie complète à ensemble négligeable prêt.
 Dès que tu abandonnes cette hypothèse, l'état des choses fait que tu ne peux développer jusqu'à présent une stochastique que dans l'univers des ensembles analytiques.
 Et en effet, comme c'est une algèbre de Heyting qui est complète tu peux aller dans la limite, mais juste dans une direction.
-En gros cela revient à faire des mathématiques dans lesquelle tu est capable de démontrer qu'une assertion est vrai sur un ensemble maximal.
-Tu ne sais cependant pas si sur son complément elle est fausse, au contraire d'une algèbre de Boole, au contraire de la logique telle qu'on l'utilise jour et nuit.
+En gros cela revient à être capable de démontrer qu'une assertion est vrai sur un ensemble maximal.
+Tu ne sais cependant pas si sur son complément elle est fausse.
+Au contraire d'une algèbre de Boole.
+Au contraire de la logique telle qu'on l'utilise jour et nuit.
 
 Notre bulle crève, le réel s'immisce brutalement.
 "Your coffee and apple-celery juice." -- "Ah, euh, yes thanks".
@@ -42,20 +45,24 @@ Notre bulle crève, le réel s'immisce brutalement.
 - Si tu réfléchis à la raison pour laquelle tout fonctionne si bien lorsque tu es dominé, c'est parce que tu peux factoriser ta $$\sigma$$-algebra $$\mathcal{F}$$ par le $$\sigma$$-idéal $$\mathcal{N}$$ des ensembles nuls.
 L'algèbre $$\mathcal{A}=\mathcal{F}/\mathcal{N}$$ ainsi obtenue est complète grâce à la propriété de countable chain condition.
 C'est le cœur de tout ce que l'on peut réaliser en stochastique classique.
-Si tu espères un jour pouvoir faire la même chose en étant dominé c'est en suivant un schéma équivalent.
-Et si tu veux t'affranchir de toute domination, c'est la universal $\sigma$-algebra qu'il te faudra factoriser.
+Si tu espères un jour pouvoir faire la même chose en t'affranchissant de toute domination c'est un schéma équivalent qu'il te faudra suivre;
+C'est l'universal $\sigma$-algebra qu'il te faudra factoriser.
 - Et pour cela tu veux utiliser le fait qu'elle soit stable sous l'action des schémas des Souslin?
 - Exactement.
 - Et par quoi veux tu la factoriser?
 - Je ne suis pas encore certain.
 Le fait que l'opération de génération de $\sigma$-algèbre ne soit pas commutative avec l'intersection me laisse espérer que je puisse la factoriser avec des idéals polaires suffisamment généraux pour en obtenir la complétude.
-- En gros, tu veux me faire croire qu'utilisant le fait que pour toute function $$\sigma:\cup_n \mathbb{N}^n\to I$$, famille $$(M_i)_{i\in I}\subseteq \mathcal{F}$$, l'ensemble $$\cup_{\gamma}\cap_n M_{\sigma(\gamma(1),\ldots,\gamma(n))}$$ où tu prends l'union sur toute les suites $\gamma$ à valeur dans $$\mathbb{N}$$, tu pourrais démontrer que tu es complet?
+- Si je résume, tu veux me faire croire qu'en utilisant le fait que pour toute function $$\sigma:\cup_n \mathbb{N}^n\to I$$, famille $$(M_i)_{i\in I}\subseteq \mathcal{F}$$, l'ensemble $$\cup_{\gamma}\cap_n M_{\sigma(\gamma(1),\ldots,\gamma(n))}$$ où tu prends l'union sur toutes les suites $\gamma$ à valeur dans $$\mathbb{N}$$, tu pourrais démontrer que tu es complet modulo un $$\sigma$$-ideal d'ensembles polaires.
 - J'espère.
-En tout cas, la cardinalité de l'ensemble des suites à valeur dans $$\mathbb{N}$$ est celle du continue donc il se pourrait que l'on soit un peu plus complet.
-- Ce serait Krass.
+En tout cas, la cardinalité de l'ensemble des suites à valeur dans $$\mathbb{N}$$ est celle du continue donc il se pourrait que l'on puisse atteindre la completude.
+- Ce serait krass.
 - Je doute que je puisse y arriver, en particulier parce que ces opérations sont extrêmement abstraites.
-Et il n'est pas certain que ce soit vrai, il est impossible à ce niveau de se faire une intuition.
+Et il n'est pas certain que ce soit vrai, il est impossible à ce niveau de se faire une idée claire.
 - Bon courage.
-- Mouais, il faut bien occuper son temps, de toutes manières nous échouons 95% du temps et nous avons la chance d'être payé pour cela.
-- La différence, c'est qu'avant d'echouer ici, il va te falloir noircir beaucoup, mais alors beaucoup de pages.
+- Mouais, il faut bien occuper son temps, de toutes manières nous échouons 95% du temps mais nous avons la chance d'être payé pour cela.
+- La différence, c'est qu'avant d'échouer ici, il va te falloir noircir beaucoup, mais alors beaucoup de pages.
 - Oui... Je sais...
+
+La facture tombe sur la table.
+Les murmures passionnés d'un couple à côté flottent dans l'air.
+Il existe un monde, là, nettement plus tangible, nettement plus simple, qui ne se pose pas la question d'un prédicat ou de son complément.
