--- a/_posts/2015-09-09-souslin.md
+++ b/_posts/2015-09-09-souslin.md
@@ -52,7 +52,7 @@ C'est l'universal $\sigma$-algebra qu'il te faudra factoriser.
 - Et par quoi veux tu la factoriser?
 - Je ne suis pas encore certain.
 Le fait que l'opération de génération de $\sigma$-algèbre ne soit pas commutative avec l'intersection me laisse espérer que je puisse la factoriser avec des idéals polaires suffisamment généraux pour en obtenir la complétude.
-- Si je résume, tu veux me faire croire qu'en utilisant le fait que pour toute function $$\sigma:\cup_n \mathbb{N}^n\to I$$, famille $$(M_i)_{i\in I}\subseteq \mathcal{F}$$, l'ensemble $$\cup_{\gamma}\cap_n M_{\sigma(\gamma(1),\ldots,\gamma(n))}$$ où tu prends l'union sur toutes les suites $\gamma$ à valeur dans $$\mathbb{N}$$, tu pourrais démontrer que tu es complet modulo un $$\sigma$$-ideal d'ensembles polaires.
+- Si je résume, tu veux me faire croire qu'en utilisant le fait que pour toute function $$\sigma:\cup_n \mathbb{N}^n\to I$$, famille $$(M_i)_{i\in I}\subseteq \mathcal{F}$$, l'ensemble $$\cup_{\gamma}\cap_n M_{\sigma(\gamma(1),\ldots,\gamma(n))}$$, où tu prends l'union sur toutes les suites $\gamma$ à valeur dans $$\mathbb{N}$$, soit dans $$\mathcal{F}$$, tu pourrais démontrer que tu es complet modulo un $$\sigma$$-ideal d'ensembles polaires.
 - J'espère.
 En tout cas, la cardinalité de l'ensemble des suites à valeur dans $$\mathbb{N}$$ est celle du continu donc il se pourrait que l'on puisse atteindre la completude.
 - Ce serait krass.
